# lightarti-rest-android

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  build.gradle  gradle.properties  rust-toolchain.toml  settings.gradle
.github/workflows/: build.yml  release.yml
arti/: build.gradle
arti/app/: build.gradle
arti/app/src/main/: AndroidManifest.xml
arti/app/src/main/res/navigation/: nav_graph.xml
arti/app/src/main/res/values-night/: themes.xml
arti/src/androidTest/java/org/c4dt/artiwrapper/: ExampleInstrumentedTest.java
arti/src/androidTest/java/org/c4dt/myapplication/: ExampleInstrumentedTest.java
arti/src/main/: AndroidManifest.xml
arti/src/main/cpp/: native-lib.cpp
arti/src/main/java/org/c4dt/artiwrapper/: JniApi.java
arti/src/main/java/org/c4dt/myapplication/: JniApi.java  MainActivity.java
arti/src/test/java/org/c4dt/artiwrapper/: ExampleUnitTest.java
artiwrapper/: build.gradle  gradle.properties
artiwrapper/app/: build.gradle
artiwrapper/app/src/main/: AndroidManifest.xml
artiwrapper/app/src/main/res/layout/: activity_main.xml
artiwrapper/app/src/main/res/menu/: menu_main.xml
artiwrapper/app/src/main/res/values/: themes.xml
artiwrapper/src/androidTest/java/org/c4dt/artiwrapper/: JniTest.java
artiwrapper/src/main/: AndroidManifest.xml
artiwrapper/src/main/java/org/c4dt/artiwrapper/: Client.java  HttpResponse.java  JniApi.java  TorLibApi.java  TorLibException.java
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: ffi_android.rs  lib.rs
(+4 files in other folders)
