[package]
name = "arti_android"
version = "0.0.1"
authors = ["Christian Grigis <christian.grigis@epfl.ch>"]
edition = "2018"

[lib]
name = "arti_android"
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4.6"
log-panics = "2.0"

# Packages for tor
tor-client = {git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "c372671b5ad2663151cbaf2ff392f1e6f0ba292f"}
tor-config = {git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "c372671b5ad2663151cbaf2ff392f1e6f0ba292f"}
tor-dirmgr = {git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "c372671b5ad2663151cbaf2ff392f1e6f0ba292f"}
tor-rtcompat = {git = "https://gitlab.torproject.org/tpo/core/arti.git", rev = "c372671b5ad2663151cbaf2ff392f1e6f0ba292f"}
async-std = {features = ["attributes"]}
serde = { version = "1.0.124", features = ["derive"] }
tokio = {features = ["full"]}
tokio-util = {version="0.6.4", features = ["io"]}
futures = {features = ["std"]}

config = "*"
simple-logging = "*"
anyhow = "*"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.16", default-features = false }
android_logger = "0.8"
openssl-sys = {features = ["vendored"]}
rusqlite = {features = ["bundled"]}

[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2"
core-foundation = "0.6.2"

[build-dependencies]
env_logger = "0.6"
